<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信+</string>

    <!-- content_description -->
    <string name="content_description">content_description</string>

    <!-- text -->
    <string name="text_load">后台小弟疯狂奔走中&#8230;</string>

    <!-- error -->
    <string name="error_timeout">请求超时，请稍后重试</string>
    <string name="error_network">网络连接不可用，请稍后重试</string>
    <string name="error_unauthorized">认证失败，请稍后重试</string>
    <string name="error_notfound">请求没找到，请稍后重试</string>
    <string name="error_server">服务器异常，请稍后重试</string>
    <string name="error_username_password_null">账号或密码不能为空</string>
    <string name="error_username_validate">账号长度为8&#8211;15的英文数字下划线中划线</string>
    <string name="error_password_validate">密码长度为6&#8211;15的英文数字下划线中划线</string>
    <string name="error_password_twice_validate">两次输入的密码不同</string>
    <string name="error_nickname_null">昵称不能为空</string>
    <string name="error_phone_validate">请输入正确的手机号码</string>

    <!-- right -->
    <string name="right_top">置 顶</string>
    <string name="right_remove">删 除</string>

    <!-- dialog -->
    <string name="dialog_title_photo">图片</string>
    <string name="dialog_camera">拍照</string>
    <string name="dialog_local">本地相册</string>
    <string name="dialog_title_sex">性别</string>
    <string name="dialog_male">男</string>
    <string name="dialog_female">女</string>
    <string name="dialog_remove_addressbook">删除联系人</string>
    <string name="dialog_remove_history">删除该聊天</string>

    <!-- title_bar -->
    <string name="fragment_auth_logout">登录或注册</string>
    <string name="fragment_friend_info">详细资料</string>
    <string name="fragment_me_detail">个人信息</string>
    <string name="fragment_me_detail_nickname">更改昵称</string>
    <string name="fragment_me_detail_phone">更改电话</string>
    <string name="fragment_me_detail_signature">更改个性签名</string>

    <!-- auth -->
    <string name="auth_login_button">登录</string>
    <string name="auth_login_description">使用账号进行登录</string>
    <string name="auth_register_button">注册</string>
    <string name="auth_register_description">一键注册，轻松搞定</string>

    <!-- login -->
    <string name="login_input_username">账号</string>
    <string name="login_input_username_hint">请填写账号</string>
    <string name="login_input_password">密码</string>
    <string name="login_input_password_hint">请填写密码</string>
    <string name="login_forget_password">忘记密码？</string>

    <!-- register -->
    <string name="register_input_username_hint">注册后不可修改</string>
    <string name="register_input_password_1_hint">请填写注册密码</string>
    <string name="register_input_password_2">确认密码</string>
    <string name="register_input_password_2_hint">请填写确认密码</string>
    <string name="register_previous_button">上一步</string>
    <string name="register_next_button">下一步</string>
    <string name="register_input_nickname">昵称</string>
    <string name="register_input_nickname_hint">请填写昵称</string>
    <string name="register_input_sex">性别</string>
    <string name="register_input_sex_male">男</string>
    <string name="register_input_sex_female">女</string>
    <string name="register_input_phone">电话</string>
    <string name="register_input_phone_hint">电话用于找回密码</string>
    <string name="register_input_signature">个性签名</string>
    <string name="register_input_signature_hint">请填写个性签名</string>

    <!-- popup_window -->
    <string name="popup_window_group">发起群聊</string>
    <string name="popup_window_add">添加朋友</string>
    <string name="popup_window_scan">扫一扫</string>
    <string name="popup_window_feedback">意见反馈</string>
    <string name="popup_window_capture_desktop">将扫一扫添加到桌面</string>
    <string name="popup_window_capture_file">从相册选取二维码</string>

    <!-- tab -->
    <string name="tab_wechat">微信</string>
    <string name="tab_addressbook">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>

    <!-- wechat -->
    <string name="wechat_record_button">按住 说话</string>
    <string name="wechat_send_button">发送</string>

    <!-- addressbook -->
    <string name="addressbook_total">位联系人</string>

    <!-- friend -->
    <string name="friend_info_username">微信号：</string>
    <string name="friend_info_phone">电话</string>
    <string name="friend_info_signature">个性签名</string>
    <string name="friend_info_undefined">未设置</string>
    <string name="friend_info_send_button">发消息</string>
    <string name="friend_info_cancel_button">取消</string>
    <string name="friend_info_star_button">标为星标朋友</string>
    <string name="friend_info_auth_button">设置朋友圈权限</string>
    <string name="friend_info_card_button">发送该名片</string>
    <string name="friend_info_note_button">备注名</string>
    <string name="friend_info_black_button">加入黑名单</string>
    <string name="friend_info_complain_button">投诉</string>
    <string name="friend_info_delete_button">删除</string>
    <string name="friend_info_desktop_button">添加到桌面</string>

    <!-- find -->
    <string name="find_friend">朋友圈</string>
    <string name="find_scan">扫一扫</string>
    <string name="find_shake">摇一摇</string>
    <string name="find_vicinity">附近的人</string>
    <string name="find_game">游戏</string>

    <!-- scan -->
    <string name="scan_title_bar">二维码/条码</string>
    <string name="scan_prompt">将二维码/条码放入框内，即可自动扫描</string>
    <string name="scan_not_found">未发现二维码/条码</string>
    <string name="scan_tab_qrcode">扫码</string>
    <string name="scan_tab_cover">封面</string>
    <string name="scan_tab_streetscape">街景</string>
    <string name="scan_tab_translation">翻译</string>

    <!-- browser -->
    <string name="browser_title">提示</string>
    <string name="browser_content">已扫描到以下内容</string>

    <!-- shake -->
    <string name="shake_title_bar_person">摇一摇</string>
    <string name="shake_title_bar_song">摇歌曲</string>
    <string name="shake_title_bar_tv">摇电视</string>
    <string name="shake_tab_person">人</string>
    <string name="shake_tab_song">歌曲</string>
    <string name="shake_tab_tv">电视</string>

    <!-- me -->
    <string name="me_info">微信号：</string>
    <string name="me_album">我的相册</string>
    <string name="me_collection">我的收藏</string>
    <string name="me_setting">设置</string>

    <!-- me_detail -->
    <string name="me_detail_photo">头像</string>
    <string name="me_detail_nickname">昵称</string>
    <string name="me_detail_phone">电话</string>
    <string name="me_detail_code">二维码名片</string>
    <string name="me_detail_sex">性别</string>
    <string name="me_detail_signature">个性签名</string>
    <string name="me_detail_undefined">未设置</string>
    <string name="me_detail_complete_button">完成</string>

    <!-- record -->
    <string name="record_upglide">手指上滑，取消发送</string>
    <string name="record_loosen">松开手指，取消发送</string>
    <string name="record_short">录音时间太短</string>

    <!-- date -->
    <string-array name="date_day">
        <item>凌晨</item>
        <item>早上</item>
        <item>上午</item>
        <item>中午</item>
        <item>下午</item>
        <item>晚上</item>
    </string-array>
    <string-array name="date_week">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="date_month">M月d日</string>
    <string name="date_year">yyyy年M月d日</string>

</resources>