<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bkg"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/content_description"
            android:scaleType="fitEnd"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_auth_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/selector_button_green"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/auth_login_button"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/auth_login_description"
        android:textColor="@color/font_gray"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_auth_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/selector_button_white"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/auth_register_button"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/auth_register_description"
        android:textColor="@color/font_gray"
        android:textSize="12sp" />

</LinearLayout>