<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bkg"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingTop="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_main"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/content_description"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/find_friend" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/find_friend"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_main"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:contentDescription="@string/content_description"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/find_scan" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/find_scan"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/main_dividing_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_main"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:contentDescription="@string/content_description"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/find_shake" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/find_shake"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_main"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/content_description"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/find_vicinity" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/find_vicinity"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_main"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/content_description"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/find_game" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/find_game"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>